 * #1465 (The Sample constructor based on a list and an integer should not exist)
 * #1474 (optimization defaults)
 * #1507 (Leak in Collection typemaps)
 * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 * #1520 (The NLopt test is dubious)
 * #1521 (Basis of MonomialFunction)
 * #1540 (SubsetSampling: incorrect event sample)
 * #1556 (WeibullMin::computePDFGradient yields the partial derivatives in the wrong order)


== 1.15 release (2020-05-25) == #release-1.15

=== Library ===

==== Major changes ====
 * New EV solver for KarhunenLoeveP1Algorithm (Spectra), with sparse matrix and HMatrix support
 * Enable HMat AcaRandom compression method

==== New classes ====
 * Ipopt optimization solver

==== Documentation ====

==== API changes ====
 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Removed deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Removed deprecated MethodOfMomentsFactory::set,getOptimizationProblem
 * ResourceMap::Set* methods no longer add new keys, the new Add* methods must be used instead
 * Removed OPTpp
 * Renamed HistogramFactory::computeSilvermanBandwidth into HistogramFactory::computeBandwidth.

=== Python module ===
 * ProcessSample __getitem__ returns Sample instead of Field
 * Implement list indexing

=== Miscellaneous ===
 * Add Sample::getMarginal(Description)
 * Fixed TBB performance when used together with OpenBLAS

=== Bug fixes ===
 * #1124 (DistributionFactory::buildAsXXX methods not documented)
 * #1213 (The legend of the graphics in MetaModelValidation is wrong)
 * #1222 (There is no kriging example based on HMAT)
 * #1331 (FittingTest_BestModelBIC sometimes fail)
 * #1335 (The return of the unsafe ResourceMap)
 * #1337 (The rDiscrete function has no help page)
 * #1349 (Problem in the graph of Histogram)
 * #1351 (Text has a zero size)